lots of bug fixes, mobile development, new AWS/NeonDB  environments

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,21 @@
 # Copy to .env.dev for local development runtime
 # Copy to .env.dev.migrate for local migrations
 # Copy to .env.prod and .env.prod.migrate for prod work
+#
+# NeonDB Projects:
+#   breederhq-production (prod) — branch: production
+#   breederhq-development (dev) — branches: dev, alpha, bravo
+#
+# In deployed environments, ALL secrets below are loaded from AWS Secrets Manager.
+# Set USE_SECRETS_MANAGER=true and AWS_SECRET_NAME=breederhq-api/{env} to enable.
+# See: docs/operations/AWS-SECRETS-MANAGER.md
 
-# Runtime: Use pooled connection (bhq_app role)
-# DATABASE_URL=postgresql://bhq_app:PASSWORD@HOST-pooler.../neondb?sslmode=require
+# Runtime: Use pooled connection (-pooler endpoint, via PgBouncer)
+# DATABASE_URL=postgresql://neondb_owner:PASSWORD@HOST-pooler.c-3.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
-# Migrations: Use direct connection (bhq_migrator role)
-# DATABASE_URL=postgresql://bhq_migrator:PASSWORD@HOST.../neondb?sslmode=require
-# DATABASE_DIRECT_URL=postgresql://bhq_migrator:PASSWORD@HOST.../neondb?sslmode=require
+# Migrations: Use direct connection (no pooler, for DDL operations)
+# DATABASE_URL=postgresql://neondb_owner:PASSWORD@HOST.c-3.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+# DATABASE_DIRECT_URL=postgresql://neondb_owner:PASSWORD@HOST.c-3.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 NODE_ENV=development
 PORT=6001
@@ -20,8 +28,9 @@ PORT=6001
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
 COOKIE_SECRET=
 
-# Database connection
+# Database connection (pooled for runtime, direct for migrations)
 DATABASE_URL=
+DATABASE_DIRECT_URL=
 
 # ────────────────────────────────────────────────────────────────────────────
 # Email (Resend)
