lots of bug fixes, mobile development, new AWS/NeonDB  environments

--- a/.env.prod
+++ b/.env.prod
@@ -3,9 +3,11 @@
 
 NODE_ENV=production
 
-# V2 Database connection (pooled, for runtime queries)
-# Use bhq_app role with pooler endpoint
-DATABASE_URL=postgresql://bhq_app:npg_zi23xLvUqQau@ep-dark-breeze-ael53qjx-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+# Database connection - NeonDB breederhq-production project
+# Pooled (runtime queries via PgBouncer)
+DATABASE_URL=postgresql://neondb_owner:npg_F1muKtv9WfiD@ep-orange-smoke-aj3kv9vw-pooler.c-3.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+# Direct (for migrations - no pooler)
+DATABASE_DIRECT_URL=postgresql://neondb_owner:npg_F1muKtv9WfiD@ep-orange-smoke-aj3kv9vw.c-3.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Reseend Email Services
 RESEND_API_KEY=re_Cadwni4p_Fxd2nMHFrwMm6jnUmnLSMGT1
