various fixes and updates

--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "prisma:gen": "prisma generate --schema=prisma/schema.prisma",
     "db:studio": "npx dotenv -e .env.dev -- prisma studio --schema=prisma/schema.prisma",
     "db:gen": "prisma generate --schema=prisma/schema.prisma",
-    "db:pull": "node scripts/development/run-with-env.js .env.dev.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
-    "db:pull:prod": "node scripts/development/run-with-env.js .env.prod.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
+    "db:pull": "node scripts/development/run-with-env.js --quiet .env.dev.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
+    "db:pull:prod": "node scripts/development/run-with-env.js --quiet .env.prod.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
     "db:new": "npx dbmate --migrations-dir db/migrations new",
     "db:dev:status": "npx dbmate --env-file .env.dev.migrate --migrations-dir db/migrations status",
     "db:dev:up": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:dev:down": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations rollback",
-    "db:dev:sync": "npm run db:dev:up && npm run db:pull && npm run db:gen",
+    "db:dev:sync": "npm run db:dev:up && npm run db:pull && npm run prisma:validate && npm run db:gen",
     "db:dev:dump": "npx dbmate --env-file .env.dev.migrate --migrations-dir db/migrations dump",
     "db:dev:deploy": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:dev:validate": "node scripts/development/run-with-env.js .env.dev.migrate tsx scripts/migrations/v2/validate-post-import.ts",
