massive i18n update.  Waitlist, AWS SM work, bug fixes, etc.

--- a/.env.dev.migrate.example
+++ b/.env.dev.migrate.example
@@ -1,8 +1,18 @@
 # Development Migration Environment
-# Used by: npm run db:dev:migrate, npm run db:dev:status, npm run db:dev:grant
+# Used by: npm run db:dev:* scripts (dbmate, prisma db pull, seed scripts)
+#
+# This file is a THIN CONFIG POINTER — no credentials here.
+# Credentials are fetched from AWS Secrets Manager at runtime.
+#
+# run-with-env.js detects AWS_SECRET_NAME and:
+#   1. Fetches the SM secret
+#   2. Remaps DATABASE_URL = DATABASE_DIRECT_URL  (bhq_migrator @ direct — required for DDL)
+#
+# Available secrets (dev AWS account):
+#   breederhq/dev-prototype  ← active prototype (ep-misty-frog)
+#   breederhq/dev            ← future dev (ep-odd-bonus) — use after migration cutover
 
 NODE_ENV=development
-
-# Use bhq_migrator role with DIRECT endpoint (no -pooler in hostname)
-DATABASE_URL=postgresql://bhq_migrator:PASSWORD@HOSTNAME.neon.tech/neondb?sslmode=require
-DATABASE_DIRECT_URL=postgresql://bhq_migrator:PASSWORD@HOSTNAME.neon.tech/neondb?sslmode=require
+AWS_SECRET_NAME=breederhq/dev-prototype
+AWS_PROFILE=dev
+AWS_SECRETS_MANAGER_REGION=us-east-2
