--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,38 @@
 # BreederHQ Environment Config Example #
 ########################################
 
-# Copy to .env.dev for local development runtime
-# Copy to .env.dev.migrate for local migrations
-# Copy to .env.prod and .env.prod.migrate for prod work
+# NOTE: .env.dev is already committed to the repo — it contains the AWS Secrets Manager
+# pointer and non-secret local config. You do NOT need to copy this file for normal development.
+#
+# This file is reference documentation showing all available environment variables.
+# Use it if you need to set up an environment WITHOUT AWS Secrets Manager
+# (e.g., emergency rollback, CI runner, or new environment bootstrap).
+#
+# NOTE: .env.dev.migrate and .env.prod.migrate are thin SM config pointers — do NOT
+#       add credentials to them. Add AWS_SECRET_NAME + AWS_PROFILE only.
 #
 # NeonDB Projects:
-#   breederhq-production (prod) — branch: production
-#   breederhq-development (dev) — branches: dev, alpha, bravo
+#   breederhq-prototype (legacy)  — active prototype (ep-misty-frog / ep-dark-breeze)
+#   breederhq-production (prod)   — future production (ep-orange-smoke)
+#   breederhq-development (dev)   — future dev/alpha/bravo (ep-odd-bonus / ep-twilight-sea / ep-young-river)
+#
+# AWS Secrets Manager naming (all in us-east-2):
+#   Dev account (335274136775):
+#     breederhq/dev-prototype  ← active dev (ep-misty-frog, breederhq-prototype)
+#     breederhq/dev            ← future dev  (polished-fire-14346254)
+#     breederhq/alpha          ← alpha env   (polished-fire-14346254)
+#     breederhq/bravo          ← bravo env   (polished-fire-14346254)
+#     breederhq/platform       ← cross-env management keys (NeonDB API, Sentry, etc.)
+#   Prod account (427814061976):
+#     breederhq/prod-prototype ← active prod (ep-dark-breeze, breederhq-prototype)
+#     breederhq/prod           ← future prod (flat-flower-54202261)
+#
+# DB Role convention in every SM secret:
+#   DATABASE_URL         = bhq_app @ pooler endpoint  (runtime)
+#   DATABASE_DIRECT_URL  = bhq_migrator @ direct endpoint  (migrations + prisma db pull)
 #
 # In deployed environments, ALL secrets below are loaded from AWS Secrets Manager.
-# Set USE_SECRETS_MANAGER=true and AWS_SECRET_NAME=breederhq-api/{env} to enable.
+# Set USE_SECRETS_MANAGER=true and AWS_SECRET_NAME=breederhq/{env} to enable.
 # See: docs/operations/AWS-SECRETS-MANAGER.md
 
 # Runtime: Use pooled connection (-pooler endpoint, via PgBouncer)
@@ -99,6 +121,14 @@ S3_BUCKET=breederhq-assets-dev
 # Generate secrets with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_ACCESS_SECRET=
 JWT_REFRESH_SECRET=
+
+# ────────────────────────────────────────────────────────────────────────────
+# Email Compliance (CAN-SPAM / List-Unsubscribe)
+# ────────────────────────────────────────────────────────────────────────────
+# Secret for signing unsubscribe tokens (JWT). Separate from auth secrets.
+# Unsubscribe headers are omitted if not set (emails still send without them).
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_UNSUBSCRIBE_SECRET=
 
 # ────────────────────────────────────────────────────────────────────────────
 # Firebase Cloud Messaging (Push Notifications)
