--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "preflight": "node scripts/development/preflight-env.js",
-    "dev": "npx dotenv -e .env.dev -- node scripts/development/preflight-env.js && npx dotenv -e .env.dev -- tsx watch src/server.ts",
+    "dev": "node scripts/development/boot-dev.js",
     "dev:stripe": "echo \"ℹ️  Starting with Stripe billing enabled (requires STRIPE_SECRET_KEY in .env.dev)\" && npm run dev",
     "build": "node --max-old-space-size=4096 ./node_modules/typescript/lib/tsc.js -p .",
     "start": "node scripts/development/preflight-env.js && node dist/server.js",
@@ -25,11 +25,12 @@
     "db:pull": "node scripts/development/run-with-env.js --quiet .env.dev.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
     "db:pull:prod": "node scripts/development/run-with-env.js --quiet .env.prod.migrate prisma db pull --schema=prisma/schema.prisma && node scripts/development/post-db-pull.js",
     "db:new": "npx dbmate --migrations-dir db/migrations new",
-    "db:dev:status": "npx dbmate --env-file .env.dev.migrate --migrations-dir db/migrations status",
+    "db:dev:status": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations status",
     "db:dev:up": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:dev:down": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations rollback",
-    "db:dev:sync": "npm run db:dev:up && npm run db:pull && npm run prisma:validate && npm run db:gen",
-    "db:dev:dump": "npx dbmate --env-file .env.dev.migrate --migrations-dir db/migrations dump",
+    "db:preflight": "node scripts/development/preflight-migration-check.js",
+    "db:dev:sync": "npm run db:preflight && npm run db:dev:up && npm run db:pull && npm run prisma:validate && npm run db:gen",
+    "db:dev:dump": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations dump",
     "db:dev:deploy": "node scripts/development/run-with-env.js .env.dev.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:dev:seed:users": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-test-users.ts",
     "db:dev:seed:traits": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
@@ -54,11 +55,11 @@
     "db:prod:seed:supplements": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-supplement-benchmarks.ts",
     "db:prod:seed:microchips": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-microchip-registries.ts",
     "db:prod:seed:rearing": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-rearing-benchmarks.ts",
-    "db:prod:status": "npx dbmate --env-file .env.prod.migrate --migrations-dir db/migrations status",
+    "db:prod:status": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations status",
     "db:prod:deploy": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:prod:up": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:prod:down": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations rollback",
-    "db:prod:dump": "npx dbmate --env-file .env.prod.migrate --migrations-dir db/migrations dump",
+    "db:prod:dump": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations dump",
     "bootstrap:admin:dev": "npx dotenv -e .env.dev -- node scripts/admin/bootstrap-global-admin-access.mjs",
     "bootstrap:admin:prod": "npx dotenv -e .env.prod -- node scripts/admin/bootstrap-global-admin-access.mjs",
     "script:enable-public-program": "node scripts/admin/enable-public-program.mjs",
