--- a/.env.prod.migrate.example
+++ b/.env.prod.migrate.example
@@ -1,8 +1,18 @@
 # Production Migration Environment
-# Used by: npm run db:prod:deploy, npm run db:prod:status, npm run db:prod:grant
+# Used by: npm run db:prod:* scripts (dbmate, prisma db pull, seed scripts)
+#
+# This file is a THIN CONFIG POINTER — no credentials here.
+# Credentials are fetched from AWS Secrets Manager at runtime.
+#
+# run-with-env.js detects AWS_SECRET_NAME and:
+#   1. Fetches the SM secret
+#   2. Remaps DATABASE_URL = DATABASE_DIRECT_URL  (bhq_migrator @ direct — required for DDL)
+#
+# Available secrets (prod AWS account):
+#   breederhq/prod-prototype  ← active prototype (ep-dark-breeze)
+#   breederhq/prod            ← future production — use after migration cutover
 
 NODE_ENV=production
-
-# Use bhq_migrator role with DIRECT endpoint (no -pooler in hostname)
-DATABASE_URL=postgresql://bhq_migrator:PASSWORD@HOSTNAME.neon.tech/neondb?sslmode=require
-DATABASE_DIRECT_URL=postgresql://bhq_migrator:PASSWORD@HOSTNAME.neon.tech/neondb?sslmode=require
+AWS_SECRET_NAME=breederhq/prod-prototype
+AWS_PROFILE=prod
+AWS_SECRETS_MANAGER_REGION=us-east-2
