massive chagnes to waitlist workflow and other changes and bug fixes.

--- a/.env.example
+++ b/.env.example
@@ -103,15 +103,21 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # ────────────────────────────────────────────────────────────────────────────
-# AWS S3 Storage
+# AWS S3 Storage & CDN
 # ────────────────────────────────────────────────────────────────────────────
 # Used for file uploads (animal photos, documents, contracts, etc.)
 # DEV bucket: breederhq-assets-dev
-# PROD bucket: breederhq-assets-prod (when created)
+# PROD bucket: breederhq-assets-prod
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 S3_BUCKET=breederhq-assets-dev
+
+# CloudFront CDN domain (REQUIRED — without this, image URLs fall back to
+# direct S3 URLs which return 403 because the bucket only allows CloudFront OAC).
+# See docs/operations/infrastructure/AWS-ENVIRONMENT-INVENTORY.md for per-env values.
+# In deployed environments, this is loaded from AWS Secrets Manager.
+CDN_DOMAIN=d15tdn3qa9of1k.cloudfront.net
 
 # ────────────────────────────────────────────────────────────────────────────
 # Mobile App Authentication (JWT)
