--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:contracts": "npx dotenv -e .env.dev -- tsx --test tests/party-api-contracts.test.ts",
     "test:regression": "npx dotenv -e .env.dev -- tsx --test tests/party-migration-regression.test.ts",
     "validate:sql": "npx dotenv -e .env.dev -- tsx scripts/validation/validate-party-migration.ts",
-    "prisma:validate": "npx dotenv -e .env.dev.migrate -- prisma validate --schema=prisma/schema.prisma",
+    "prisma:validate": "node scripts/development/run-with-env.js --quiet .env.dev.migrate prisma validate --schema=prisma/schema.prisma",
     "prisma:gen": "prisma generate --schema=prisma/schema.prisma",
     "db:studio": "npx dotenv -e .env.dev -- prisma studio --schema=prisma/schema.prisma",
     "db:gen": "prisma generate --schema=prisma/schema.prisma",
@@ -60,6 +60,10 @@
     "db:prod:up": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations migrate",
     "db:prod:down": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations rollback",
     "db:prod:dump": "node scripts/development/run-with-env.js .env.prod.migrate npx dbmate --migrations-dir db/migrations dump",
+    "db:dev:health": "node scripts/development/run-with-env.js .env.dev.migrate node scripts/monitoring/db-health-check.mjs",
+    "db:prod:health": "node scripts/development/run-with-env.js .env.prod.migrate node scripts/monitoring/db-health-check.mjs",
+    "db:dev:retention": "node scripts/development/run-with-env.js .env.dev.migrate node scripts/monitoring/db-retention-check.mjs",
+    "db:prod:retention": "node scripts/development/run-with-env.js .env.prod.migrate node scripts/monitoring/db-retention-check.mjs",
     "bootstrap:admin:dev": "npx dotenv -e .env.dev -- node scripts/admin/bootstrap-global-admin-access.mjs",
     "bootstrap:admin:prod": "npx dotenv -e .env.prod -- node scripts/admin/bootstrap-global-admin-access.mjs",
     "script:enable-public-program": "node scripts/admin/enable-public-program.mjs",
