post OG split + BP merger cleanup work. BP enhancements, Finance/Invoice enhancements.

--- a/.env.dev
+++ b/.env.dev
@@ -36,5 +36,6 @@ EMAIL_DEV_REDIRECT=dev@breederhq.com
 RESEND_INBOUND_DOMAIN=mail.breederhq.com
 
 # AWS config (not secrets — keys come from SM)
-AWS_REGION=us-east-1
+AWS_REGION=us-east-2
+S3_REGION=us-east-2
 S3_BUCKET=breederhq-assets-dev
