--- a/.env.example
+++ b/.env.example
@@ -110,7 +110,8 @@ STRIPE_WEBHOOK_SECRET=
 # PROD bucket: breederhq-assets-prod
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
+AWS_REGION=us-east-2
+S3_REGION=us-east-2
 S3_BUCKET=breederhq-assets-dev
 
 # CloudFront CDN domain (REQUIRED — without this, image URLs fall back to
