--- a/.env.dev
+++ b/.env.dev
@@ -25,6 +25,7 @@ AWS_SECRETS_MANAGER_REGION=us-east-2
 # ── Local-only vars (NOT in Secrets Manager) ─────────────────────────────
 # Feature flags
 MARKETPLACE_PUBLIC_ENABLED=true
+DEV_LOGIN_ENABLED=1
 
 # Application URL (for emails)
 APP_URL=http://localhost:5173
